[package]
name = "smoltcp-example"
version = "0.1.0"
authors = ["narodnik <x@x.org>"]
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.2.4"
futures = "0.3.5"
async-channel = "1.4.2"
async-executor = "1.4.0"
async-dup = "1.1.0"
async-std = "1.6.2"
anyhow = "1.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

